Docker-spark (fork of gettyimages/docker-spark) with openjdk-11